--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -1,40 +1,42 @@
 @font-face {
-    font-family: 'TmoneyRoundWindExtraBold';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "TmoneyRoundWindExtraBold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-html{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/public/images/main_bg.jpeg");
-    height: 100%;
-    opacity: 0.95;
-    overflow: hidden;
+.mainWrapper {
+  height: 100%;
+  opacity: 0.95;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("/public/images/main_bg.jpeg");
 }
-.logo{
-    margin: 0 auto;
-    display: flex;
-    padding-top: 30px;
-    justify-content: center;
-    animation: 0.7s ease-in-out loadEffect;
+
+.logo {
+  margin: 0 auto;
+  display: flex;
+  padding-top: 30px;
+  justify-content: center;
+  animation: 0.7s ease-in-out loadEffect;
 }
 
 @keyframes loadEffect {
-    0%{
-        opacity: 0;
-    }
-    25%{
-        opacity: 0.25;
-    }
-    50%{
-        opacity: 0.5;
-    }
-    75%{
-        opacity: 0.75;
-    }
-    100%{
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
 }
