feat: add MatchResult component feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -24,7 +24,7 @@
   height: fit-content;
   text-align: center;
   font-size: 30px;
-  font-weight: bold;
+  font-family: "TmoneyRoundWindExtraBold";
 }
 
 .form {
@@ -96,7 +96,7 @@
 .textWrapper {
   font-size: 20px;
   text-align: center;
-  font-weight: bold;
+  font-family: "TmoneyRoundWindExtraBold";
 }
 .textWrapper > div {
   line-height: 1.8rem;
