--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -1,6 +1,7 @@
-.Wrapper {
+.Wrapper,
+.inner {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -8,7 +9,8 @@
   align-items: center;
 }
 
-.Wrapper::before {
+.Wrapper::before,
+.inner::before {
   content: "";
   position: absolute;
   top: 0;
@@ -16,8 +18,23 @@
   right: 0;
   bottom: 0;
   background: url("../../public/images/leaf_bg.png");
-  opacity: 0.55;
+  opacity: 0.4;
   z-index: -1;
+}
+
+.outer {
+  height: 100vh;
+  overflow-y: auto;
+}
+
+.outer::-webkit-scrollbar {
+  display: none;
+}
+
+.divider {
+  width: 100%;
+  height: 5px;
+  background-color: transparent;
 }
 
 .title {
