--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -2,3 +2,34 @@ html {
     margin: 0;
     padding: 0;
 }
+.phrase {
+    font-family: TmoneyRoundWindExtraBold;
+    font-size: 2rem;
+    width: 100%;
+    margin: 0px;
+}
+.menu {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+}
+.menu > button {
+    border: none;
+}
+.menu > button:hover {
+    background-color: white;
+}
+.dropdown:hover {
+    background-color: white;
+}
+.dropdown {
+    width: 100px;
+    border: none;
+    border-right: 1px solid;
+}
+@font-face {
+    font-family: 'TmoneyRoundWindExtraBold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
