--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -127,6 +127,24 @@ div.writing {
   flex-direction: column;
   align-items: center;
 }
+.today {
+  position: relative;
+}
+.today::before {
+  background-image: url("/public/images/leafBgImg.jpg");
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.5;
+  background-position: 50% 0;
+}
+.today-content {
+  position: relative;
+}
 @font-face {
   font-family: "TmoneyRoundWindExtraBold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff") format("woff");
