--- a/front/src/css/explore.css
+++ b/front/src/css/explore.css
@@ -1,12 +1,23 @@
 .root{
+    position: relative;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
+.root::after{
+    top:0;
+    left: 0;
+    content: "";
+    position: absolute;
     background-image: url("/public/images/explore_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     overflow: hidden;
     opacity: 0.7;
     height: 100%;
-    display: flex;
-    align-items: end;
-    justify-content: center;
-
+    width: 100%;
+    z-index: -1;
 }
