--- a/front/src/css/backButton.css
+++ b/front/src/css/backButton.css
@@ -1,5 +1,5 @@
 .leftArrow {
-    left: 20px;
+    left: 50px;
     font-family: 'TmoneyRoundWindExtraBold';
     top: 30px;
     position: relative;
@@ -9,13 +9,17 @@
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     color: #fff;
-    width: 180px;
+    width: 170px;
     height: 40px;
     border-radius: 12px;
+    transition: transform 250ms;
 }
+
 .leftArrow:hover{
     cursor: pointer;
+    transform: translateY(-0.25em);
 }
+
 .leftArrow::before {
     content: "";
     position: absolute;
