--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -24,7 +24,7 @@
 
 .outer {
   height: 100vh;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 .outer::-webkit-scrollbar {
@@ -245,7 +245,7 @@
   width: 150px;
   height: 40px;
   border: none;
-  box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.15);
   color: #7e725c;
   transition: transform 250ms;
   font-family: "TmoneyRoundWindExtraBold";
@@ -322,12 +322,14 @@
   width: 80%;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 
 .personForm > div {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
 }
@@ -337,29 +339,57 @@
   height: 45px;
 }
 
-.personForm > div {
+.personalityLeftDiv,
+.personalityRightDiv {
+  width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-/* 
+
+.testTitle {
+  font-family: "TmoneyRoundWindExtraBold";
+  font-size: 2em;
+  margin-bottom: 30px;
+}
+
+.personRadioBtn {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.personRadioBtn input[type="radio"],
 .personRadioBtn input[type="radio"]:checked {
-  visibility: hidden;
+  display: none;
 }
 
 .personRadioBtn label {
+  font-family: "TmoneyRoundWindRegular";
+  font-size: 18px;
   display: block;
   border-radius: 50px;
   margin: 0 auto;
   text-align: center;
   height: -webkit-fill-available;
   line-height: 45px;
+  padding: 5px;
+  box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.2);
+}
+
+.personRadioBtn label:hover {
+  cursor: pointer;
 }
 
 .personRadioBtn input[type="radio"] + label {
   width: 100%;
   background: white;
+  color: #7e725c;
 }
 
 .personRadioBtn input[type="radio"]:checked + label {
-  background: #184da0;
-  color: #fff;
-} */
+  background: #66d267;
+  /* background: #a9fbca; */
+  color: white;
+}
