--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -1,9 +1,11 @@
 .stats {
   position: relative;
   display: flex;
-  align-items: end;
+  flex-wrap: wrap;
   justify-content: center;
-  height: 100%;
+  max-width: 1600px;
   width: 100%;
+  gap: 30px;
+  margin: 0 auto;
   z-index: 1;
 }
