--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -1,3 +1,32 @@
+.bgImg {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.bgImg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../../public/images/leafBgImg.jpg");
+  opacity: 0.4;
+  z-index: -1;
+}
+
+.desc {
+  height: fit-content;
+  text-align: center;
+  font-size: 50px;
+  font-family: "TmoneyRoundWindExtraBold";
+}
+
 .stats {
   position: relative;
   display: flex;
