modify: add blink css feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -25,6 +25,7 @@
   text-align: center;
   font-size: 50px;
   font-family: "TmoneyRoundWindExtraBold";
+  animation: blink-effect 1s step-end infinite;
 }
 
 .stats {
@@ -41,4 +42,10 @@
 
 .graphBack {
   background-color: #F7F8EE;
+}
+
+@keyframes blink-effect {
+  50% {
+    opacity: 0;
+  }
 }
