--- a/front/src/css/GameIntro.css
+++ b/front/src/css/GameIntro.css
@@ -1,6 +1,6 @@
 .gameIntroCommentImg{
-    top: 400px;
-    left: 530px;
+    top: 43%;
+    left: 28%;
     height: 350px;
     position: absolute;
     text-align: center;
@@ -9,16 +9,16 @@
 
 .gameIntroComment{
     position: absolute;
-    left: 50px;
-    right: 50px;
+    left: 0;
+    right: 0;
     text-align: center;
     color: #837156;
     vertical-align: middle;
-    top: 570px;
+    top: 61%;
 }
 .btnWrapper > button {
     position: absolute;
-    top: 750px;
+    top: 79%;
     font-size: 15px;
     font-weight: bold;
     background: #adefff;
@@ -29,7 +29,6 @@
     box-shadow: 1px 2px 2px 0px rgba(0, 0, 0, 0.15);
     color: #7e725c;
     transition: transform 250ms;
-    font-family: "TmoneyRoundWindExtraBold";
 }
 .btnWrapper > button:hover{
     transform: translateY(-0.25em);
