modify: add margin feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -24,6 +24,7 @@
   height: fit-content;
   text-align: center;
   font-size: 50px;
+  margin: 150px;
   font-family: "TmoneyRoundWindExtraBold";
   animation: blink-effect 1s step-end infinite;
 }
@@ -36,7 +37,6 @@
   max-width: 1600px;
   width: 100%;
   gap: 30px;
-  margin: 0 auto;
   z-index: 1;
 }
 
