modify: change desc css feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -20,13 +20,21 @@
   z-index: -1;
 }
 
-.desc {
+.clickBtn {
   height: fit-content;
   text-align: center;
   font-size: 50px;
   margin: 150px;
   font-family: "TmoneyRoundWindExtraBold";
   animation: blink-effect 1s step-end infinite;
+}
+
+.desc {
+  height: fit-content;
+  text-align: center;
+  font-size: 20px;
+  margin: 20px;
+  font-family: "TmoneyRoundWindExtraBold";
 }
 
 .stats {
