--- a/front/src/css/GameResult.css
+++ b/front/src/css/GameResult.css
@@ -3,10 +3,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     z-index: 1;
 }
+
 .gameResultRoot::after{
     top:0;
     left: 0;
@@ -18,39 +19,45 @@
     height: 100%;
     width: 100%;
     z-index: -1;
+
 }
 .contentRoot{
     display: table-cell;
     table-layout: fixed;
+    width: 700px;
 }
+
 .content1, .content2, .content3{
     position: absolute;
-    left: 50px;
-    right: 50px;
+    top:50%;
+    left:50%;
     text-align: center;
     color: #837156;
     vertical-align: middle;
+    transform: translate(-50%, -50%);
 }
 .content1 {
-    top: 510px;
+    top: 48%;
 }
 .content2 {
-    top: 550px;
+    top: 53%;
 }
 .content3 {
-    top: 590px;
+    top: 58%;
 }
 
-.btnWrapper {
+.resultBtnWrapper {
     width: 100%;
-    margin-top: 40px;
+    margin-top: 70%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+
 }
 
-.btnWrapper > button {
+.resultBtnWrapper > button {
     font-size: 15px;
     font-weight: bold;
+    margin-left: 10%;
     background: #fff5d0;
     border-radius: 50px;
     width: 150px;
@@ -61,7 +68,7 @@
     transition: transform 250ms;
     font-family: "TmoneyRoundWindExtraBold";
 }
-.btnWrapper > button:hover{
+.resultBtnWrapper > button:hover{
     transform: translateY(-0.25em);
     cursor: pointer;
 }
