--- a/front/src/css/GameIntro.css
+++ b/front/src/css/GameIntro.css
@@ -1,24 +1,39 @@
-.gameIntroCommentImg{
-    top: 43%;
-    left: 28%;
-    height: 350px;
+.gameIntroRoot{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
+.gameIntroRoot::after{
+    top:0;
+    left: 0;
+    content: "";
     position: absolute;
-    text-align: center;
-    vertical-align: middle;
+    background-image: url("/public/images/leafBgImg.jpg");
+    overflow: hidden;
+    opacity: 0.4;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
+.gameIntroImg{
+    top: 10%;
+    height: 300px;
+    position:relative;
 }
 
 .gameIntroComment{
     position: absolute;
-    left: 0;
-    right: 0;
     text-align: center;
     color: #837156;
-    vertical-align: middle;
-    top: 61%;
+    top: 42%;
 }
-.btnWrapper > .introBtn {
-    position: absolute;
-    top: 79%;
+
+.btnWrapper > button {
     font-size: 15px;
     font-weight: bold;
     background: #adefff;
@@ -30,7 +45,14 @@
     color: #7e725c;
     transition: transform 250ms;
 }
-.btnWrapper > .introBtn:hover{
+.btnWrapper > button:hover{
     transform: translateY(-0.25em);
     cursor: pointer;
+}
+
+.btnWrapper {
+    position: absolute;
+    top: 80%;
+    left: 46%;
+
 }
