style: add subTitle css feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -290,6 +290,18 @@
   margin-bottom: 20px;
 }
 
+.rankCharSubTitle {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-family: "TmoneyRoundWindExtraBold";
+}
+
+.charSmallSubTitle {
+  font-size: 15px;
+  font-family: "TmoneyRoundWindRegular";
+}
+
 .rankCharTitleBg {
   width: 200px;
   text-align: center;
