modify: change style feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -302,6 +302,10 @@
   font-family: "TmoneyRoundWindRegular";
 }
 
+.percentTitle {
+  color: #f27788;
+}
+
 .rankCharTitleBg {
   width: 200px;
   text-align: center;
