--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -136,14 +136,6 @@
   border-radius: 10px;
 }
 
-/* .commentArea:focus {
-  background-color: red;
-} */
-/* 
-.commentArea > div {
-  width: 100% !important;
-} */
-
 .commentArea::-webkit-scrollbar {
   width: 21px;
 }
@@ -306,14 +298,23 @@
   color: #f27788;
 }
 
-.rankCharTitleBg {
+.rankCharTitleBg,
+.rankCharTitleBg2 {
   width: 200px;
   text-align: center;
   padding: 10px;
   border-radius: 80px;
   color: #fff;
+}
+
+.rankCharTitleBg {
   background-color: rgba(21, 203, 188, 0.7);
   box-shadow: 0 3px rgba(21, 158, 147, 0.8);
+}
+
+.rankCharTitleBg2 {
+  background-color: rgba(252, 192, 199, 0.9);
+  box-shadow: 0 3px rgba(242, 120, 136, 0.8);
 }
 
 .rankCharTitle {
@@ -327,6 +328,7 @@
 
 .rankCharImage > img {
   border-radius: 50%;
+  box-shadow: 4px 3px 4px 0px rgba(0, 0, 0, 0.3);
 }
 
 .slider {
@@ -478,4 +480,17 @@
   background: #66d267;
   /* background: #a9fbca; */
   color: white;
+}
+
+.fadeInImg {
+  animation: fadein 3s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
