style: 머지후 스타일 통일

--- a/front/src/css/stats.css
+++ b/front/src/css/stats.css
@@ -20,6 +20,49 @@
   z-index: -1;
 }
 
+/* Seperate components from the background image, in order to set the background transparently  */
+.stat {
+  position: relative;
+}
+.stat::before {
+  background-image: url("/public/images/leafBgImg.jpg");
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.5;
+  background-position: 50% 0;
+  z-index: -100;
+}
+.stat-content {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation-duration: 1s;
+  animation-name: pop;
+  animation-fill-mode: forwards;
+}
+@keyframes pop {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.homeBtn {
+  top: 30px;
+  right: 50px;
+  position: relative;
+}
+
 .clickBtn {
   height: fit-content;
   text-align: center;
@@ -49,7 +92,7 @@
 }
 
 .graphBack {
-  background-color: #F7F8EE;
+  background-color: #f7f8ee;
 }
 
 @keyframes blink-effect {
