--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -60,16 +60,17 @@
 .dropdown {
   border: none;
   color: black;
+  border-right: 1px solid #81d7a4;
   padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
-  border-radius: 25px 0px 0px 25px;
+  border-radius: 1.5rem 0 0 1.5rem;
   text-align: center;
   cursor: pointer;
   width: 10rem;
-  height: 100%;
+  height: 3rem;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffffff;
+  transition: all 0.5s;
   font-family: TmoneyRoundWindExtraBold;
 }
 .dropdown:hover {
@@ -80,11 +81,11 @@
   color: black;
   padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
   border-radius: 25px;
   text-align: center;
   cursor: pointer;
   width: fit-content;
+  transition: all 0.5s;
   height: 45px;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffb9ed;
@@ -102,14 +103,15 @@
 /* Comment inputbox */
 input.comment {
   border: none;
+  border-left: 1px solid #81d7a4;
   color: black;
-  padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 0 1.5rem 1.5rem 0;
   text-align: center;
   cursor: pointer;
+  transition: all 0.5s;
   width: 100%;
+  height: calc(3rem - 2px);
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffffff;
   font-family: TmoneyRoundWindExtraBold;
@@ -132,7 +134,8 @@ input.comment::placeholder {
   font-size: 1rem;
   color: #f14d41;
   width: 100%;
-  margin-left: 1%;
+  margin-left: 5%;
+  margin-top: -21px;
 }
 .noAlert {
   display: none;
@@ -149,12 +152,12 @@ div.comment {
   color: black;
   padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
-  border-radius: 25px;
+  border-radius: 1.5rem;
+  transition: all 0.5s;
   text-align: center;
   cursor: pointer;
   width: fit-content;
-  height: 45px;
+  height: 3rem;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #fff9e4;
   font-family: TmoneyRoundWindExtraBold;
@@ -190,7 +193,7 @@ div.comment {
   width: 75%;
   height: 25px;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
-  background-color: #fff9e4;
+  background-color: #bbffbb;
   font-family: TmoneyRoundWindExtraBold;
 }
 .comment-container {
