--- a/front/src/css/today.css
+++ b/front/src/css/today.css
@@ -35,14 +35,6 @@
   }
 }
 
-/* Download font */
-@font-face {
-  font-family: "TmoneyRoundWindExtraBold";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 /* Font application to phrases */
 .phrase {
   font-family: TmoneyRoundWindExtraBold;
@@ -66,33 +58,34 @@
 
 /* Villager selector as dropdown menu*/
 .dropdown {
-  border: 1.2px #c0dbdd solid;
+  border: none;
   color: black;
+  border-right: 1px solid #81d7a4;
   padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
-  border-radius: 25px 0px 0px 25px;
+  border-radius: 1.5rem 0 0 1.5rem;
   text-align: center;
   cursor: pointer;
   width: 10rem;
-  height: 100%;
+  height: 3rem;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffffff;
+  transition: all 0.5s;
   font-family: TmoneyRoundWindExtraBold;
 }
 .dropdown:hover {
   opacity: 0.75;
 }
 .menu > button {
-  border: 1.2px #c0dbdd solid;
+  border: none;
   color: black;
   padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
   border-radius: 25px;
   text-align: center;
   cursor: pointer;
   width: fit-content;
+  transition: all 0.5s;
   height: 45px;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffb9ed;
@@ -109,21 +102,26 @@
 
 /* Comment inputbox */
 input.comment {
-  border: 1.2px #c0dbdd solid;
+  border: none;
+  border-left: 1px solid #81d7a4;
   color: black;
-  padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 0 1.5rem 1.5rem 0;
   text-align: center;
   cursor: pointer;
+  transition: all 0.5s;
   width: 100%;
+  height: calc(3rem - 2px);
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #ffffff;
   font-family: TmoneyRoundWindExtraBold;
 }
 input.comment:hover {
   opacity: 0.75;
+}
+input.comment::placeholder {
+  font-size: 0.9rem;
+  color: #81d7a4;
 }
 .submitForm {
   display: flex;
@@ -136,7 +134,8 @@ input.comment:hover {
   font-size: 1rem;
   color: #f14d41;
   width: 100%;
-  margin-left: 1%;
+  margin-left: 5%;
+  margin-top: -21px;
 }
 .noAlert {
   display: none;
@@ -149,16 +148,16 @@ div.comment {
 
 /* Buttons */
 .btn-comment {
-  border: 1.2px #c0dbdd solid;
+  border: none;
   color: black;
   padding: 10px;
   font-size: 1.23rem;
-  line-height: 1.2em;
-  border-radius: 25px;
+  border-radius: 1.5rem;
+  transition: all 0.5s;
   text-align: center;
   cursor: pointer;
   width: fit-content;
-  height: 45px;
+  height: 3rem;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
   background-color: #fff9e4;
   font-family: TmoneyRoundWindExtraBold;
@@ -184,7 +183,7 @@ div.comment {
 }
 .speech-bubble {
   position: relative;
-  border: 1.2px #c0dbdd solid;
+  border: none;
   color: black;
   padding: 10px;
   font-size: 1.23rem;
@@ -194,8 +193,19 @@ div.comment {
   width: 75%;
   height: 25px;
   box-shadow: 1px 3px 2px 1px rgba(25, 25, 25, 0.2);
-  background-color: #fff9e4;
+  background-color: #bbffbb;
   font-family: TmoneyRoundWindExtraBold;
+}
+.comment-container {
+  animation: show forwards 1s;
+}
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Apply animations */
@@ -205,6 +215,8 @@ div.comment {
   align-items: center;
   justify-content: center;
   width: auto;
+  animation-name: enlarge;
+  animation-fill-mode: forwards;
   position: fixed;
 }
 .writing {
@@ -227,4 +239,20 @@ div.comment {
     transform: scale(65%);
     top: 5%;
   }
+}
+@keyframes enlarge {
+  from {
+    transform: scale(65%);
+    top: 5%;
+  }
+  to {
+    transform: scale(100%);
+    top: 38vh;
+  }
+}
+
+.today-calendar {
+  top: 30px;
+  right: 50px;
+  position: relative;
 }
