modify: 가시성을 위해서 배경 톤 수정
feat : 새로운 기능 추가
fix : 버그 수정
docs : 문서 수정
modify : 기능 수정 및 코드 수정
refact : 리팩토링

--- a/front/src/css/match.module.css
+++ b/front/src/css/match.module.css
@@ -23,7 +23,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("../../public/images/leafBgImg.jpg");
+  background: url("../../public/images/leafBgImg.png");
   opacity: 0.4;
   z-index: -1;
 }
