--- a/front/src/css/flipcard.css
+++ b/front/src/css/flipcard.css
@@ -10,9 +10,10 @@
     margin: 70px auto 0;
     /*margin: 1rem 2rem;*/
 }
-.disable{
+.correct{
     pointer-events: none;
 }
+
 .card{
     display: flex;
     margin-top: .1rem;
