--- a/front/src/css/team.module.css
+++ b/front/src/css/team.module.css
@@ -20,18 +20,12 @@
 
 @keyframes rotate {
   0% {
-    transform: rotate(-20deg);
-  }
-  25% {
-    transform: rotate(0deg);
+    transform: scaleX(1);
   }
   50% {
-    transform: rotate(20deg);
-  }
-  75% {
-    transform: rotate(0deg);
+    transform: scaleX(1.3);
   }
   100% {
-    transform: rotate(-20deg);
+    transform: scaleX(1);
   }
 }
