--- a/front/src/css/flipcard.css
+++ b/front/src/css/flipcard.css
@@ -1,56 +1,111 @@
-.card-grid{
-    display:grid;
-    align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap:1.8rem;
+.card-grid {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1.8rem;
 }
 
-.container{
-    max-width: 900px;
-    margin: 70px auto 0;
-    /*margin: 1rem 2rem;*/
-}
-.disable{
-    pointer-events: none;
-}
-.card{
-    display: flex;
-    margin-top: .1rem;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    border-radius: .5rem;
-    box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
-    background-color: white;
-    width: 150px;
-    transition: 150ms;
-    cursor: pointer;
-    transform-style: preserve-3d;
-    transform: perspective(1000px) rotateY(var(--rotate-y,0)) translateY(var(--translate-y, 0));
-}
-.card:hover{
-    --translate-y:-2px;
-    box-shadow: 0 0 5px 2px rgba(0,0,0,.5);
-}
-.card.flip{
-    --rotate-y:180deg;
+.card-grid2 {
+  display: grid;
+  align-items: center;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.8rem;
 }
 
-.card .front{
-    left:0;
+.container {
+  max-width: 900px;
+  margin: 70px auto 0;
+  /*margin: 1rem 2rem;*/
 }
-.card img{
-    width: 100%;
-    height: 100%;
+
+.container2 {
+  max-width: 900px;
+  margin: auto;
+}
+
+.disable {
+  pointer-events: none;
+}
+
+.card,
+.card2 {
+  display: flex;
+  margin-top: 0.1rem;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  transition: 150ms;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0))
+    translateY(var(--translate-y, 0));
+}
+
+.card {
+  width: 150px;
+}
+
+.card2 {
+  width: 200px;
+  min-height: 250px;
+}
+
+.card:hover,
+.card2:hover {
+  --translate-y: -2px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+}
+
+.card.flip,
+.card2.flip {
+  --rotate-y: 180deg;
 }
 
 .card .front,
-.card .back{
-    position: absolute;
-    padding: 1rem;
-    backface-visibility: hidden;
+.card2 .front {
+  left: 0;
 }
+
+.card img,
+.card2 img {
+  width: 100%;
+  height: 100%;
+}
+
+.card .front,
 .card .back {
-    transform: rotateY(180deg);
-    font-family: TmoneyRoundWindExtraBold;
+  position: absolute;
+  padding: 1rem;
+  backface-visibility: hidden;
+}
+
+.card2 .front {
+  position: absolute;
+  backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 0.5rem;
+}
+
+.card2 .back {
+  position: absolute;
+  backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card .back,
+.card2 .back {
+  transform: rotateY(180deg);
+  font-family: TmoneyRoundWindExtraBold;
 }
