modify: card background style feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/flipcard.css
+++ b/front/src/css/flipcard.css
@@ -109,3 +109,21 @@
   transform: rotateY(180deg);
   font-family: TmoneyRoundWindExtraBold;
 }
+
+.backImg {
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 0.5rem;
+}
+
+.backImg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("/public/images/card_bg.jpg");
+  opacity: 0.4;
+  z-index: -1;
+}
