modify: card text style feat : 새로운 기능 추가 fix : 버그 수정 docs : 문서 수정 modify : 기능 수정 및 코드 수정 refact : 리팩토링

--- a/front/src/css/team.module.css
+++ b/front/src/css/team.module.css
@@ -29,3 +29,22 @@
     transform: scaleX(1);
   }
 }
+
+.teamPositionTitleBg {
+  padding: 5px;
+  border-radius: 20px;
+  margin-bottom: 5px;
+}
+
+.teamPositionTitle {
+  font-size: 18px;
+  color: #7c6839;
+}
+
+.teamSubTitle {
+  color: #67676b;
+}
+
+.subTitle {
+  font-size: 14px;
+}
